[gd_scene load_steps=7 format=3 uid="uid://denlabf0x43ul"]

[ext_resource type="Script" uid="uid://b87ddh4nne673" path="res://Props/Door/interact_door.gd" id="1_v4gio"]
[ext_resource type="Texture2D" uid="uid://bw3pi2cu8ps86" path="res://Props/Door/close_door.png" id="2_lye5p"]
[ext_resource type="Texture2D" uid="uid://nsx7ws28fi1q" path="res://Props/Door/open_door.png" id="3_xlyvb"]
[ext_resource type="Texture2D" uid="uid://d1lpejed5ki3v" path="res://Props/Sprites/Ekey.png" id="4_tdjtw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh4v6"]
size = Vector2(70, 95.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8lr6"]
size = Vector2(70, 33)

[node name="InteractDoor" type="Area2D"]
collision_layer = 16
script = ExtResource("1_v4gio")
closed_texture = ExtResource("2_lye5p")
open_texture = ExtResource("3_xlyvb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.3841858e-07, -1.0000005)
scale = Vector2(0.3703704, 0.36170214)
texture = ExtResource("2_lye5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.75)
shape = SubResource("RectangleShape2D_fh4v6")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_w8lr6")

[node name="InteractHint" type="Sprite2D" parent="."]
visible = false
z_index = 8
position = Vector2(0.99999994, -29.999998)
scale = Vector2(0.015, 0.015)
texture = ExtResource("4_tdjtw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
